<resources>
    <string name="avnc_app_name" translatable="false">AVNC</string>
    <string name="title_add_server_profile">Add server</string>
    <string name="title_edit_server_profile">Edit server</string>
    <string name="title_duplicate">Duplicate</string>
    <string name="title_edit">Edit</string>
    <string name="title_delete">Delete</string>
    <string name="title_clear">Clear</string>
    <string name="title_copy_host">Copy host</string>
    <string name="title_copy_name">Copy name</string>
    <string name="title_advanced">Advanced</string>
    <string name="title_cancel">Cancel</string>
    <string name="title_save">Save</string>
    <string name="title_undo">Undo</string>
    <string name="title_settings">Settings</string>
    <string name="title_vnc_login">VNC login</string>
    <string name="title_ssh_login">SSH login</string>
    <string name="title_unlock_private_key">Unlock private key</string>
    <string name="title_remember">Remember</string>
    <string name="title_export">Export</string>
    <string name="title_import">Import</string>
    <string name="title_view_only_mode">View-only</string>
    <string name="title_hide_remote_cursor">Hide remote pointer</string>
    <string name="title_key_compat_mode">Send legacy key events</string>
    <string name="title_button_up_delay">Send delayed click events</string>
    <string name="title_resize_remote_desktop">Resize remote session to local window</string>
    <string name="title_image_quality">Image quality</string>
    <string name="title_orientation">Orientation</string>
    <string name="title_image_quality_raw">Raw</string>
    <string name="title_vnc_security">Security</string>
    <string name="title_use_ssh_tunnel">Use SSH tunnel</string>
    <string name="title_unknown_ssh_host">Unknown SSH host</string>
    <string name="title_ssh_host_key_changed">SSH host key changed</string>
    <string name="title_continue">Continue</string>
    <string name="title_delete_servers_before_import">Delete current servers before import</string>
    <string name="title_password">Password</string>
    <string name="title_use_repeater">Use repeater</string>
    <string name="title_private_key">Private key</string>
    <string name="title_change">Change</string>
    <string name="title_about">About</string>
    <string name="title_license">Licence</string>
    <string name="title_open_source_libraries">Open source libraries</string>
    <string name="title_report_bug">Report an issue</string>
    <string name="title_source_code">Source code</string>
    <string name="title_unlock_dialog">Unlock to continue</string>
    <string name="title_automatic">Automatic</string>
    <string name="title_none">None</string>
    <string name="hint_urlbar">Connect to a Server</string>
    <string name="hint_server_name">Name (e.g. Work PC)</string>
    <string name="hint_host">Host</string>
    <string name="hint_repeater_host">Repeater host</string>
    <string name="hint_port">Port</string>
    <string name="hint_server_id">Server ID</string>
    <string name="hint_username">Username</string>
    <string name="hint_password">Password</string>
    <string name="hint_ssh_host">SSH host</string>
    <string name="hint_ssh_port">SSH port</string>
    <string name="hint_key_password">Key password</string>
    <string name="msg_about_app">A fast and secure VNC client. Remotely view and control any device running a VNC server.\n\n\nAVNC is an open source and copyleft software — made with help from many contributors.</string>
    <string name="msg_server_profile_added">Server added</string>
    <string name="msg_server_profile_deleted">Server deleted</string>
    <string name="msg_zoom_locked">Zoom locked</string>
    <string name="msg_zoom_unlocked">Zoom unlocked</string>
    <string name="msg_zoom_reset">Zoom reset to 100%</string>
    <string name="msg_zoom_reset_default">Zoom reset to default</string>
    <string name="msg_zoom_saved">Saved current zoom as default</string>
    <string name="msg_pip_not_supported">Not supported on this device</string>
    <string name="msg_ptr_hiding_not_supported">Not supported on this device</string>
    <string name="msg_loading">Loading…</string>
    <string name="msg_imported">Imported</string>
    <string name="msg_exported">Exported</string>
    <string name="msg_export_auth_required">Authenticate to export servers</string>
    <string name="msg_invalid_key_file">Invalid private key file</string>
    <string name="msg_invalid_vnc_uri">Invalid VNC URI</string>
    <string name="msg_copied_to_clipboard">Copied</string>
    <string name="msg_pk_password_not_saved">AVNC no longer saves private key passwords to improve security.</string>
    <string name="msg_key_compat_mode_help">Some servers have limited Unicode support. Legacy key events can help input non-English text.</string>
    <string name="msg_button_up_delay_help">Delaying click events can help in some rare cases if an app is not responding to clicks.</string>
    <string name="msg_drag_gesture_help">Assigning an action to this gesture will change Long press detection:\n\n<b>Press-hold-release</b> → Long press\n<b>Press-hold-swipe</b> → Long press and swipe</string>
    <string name="msg_shortcut_server_deleted">This server has been deleted</string>
    <string name="tip_empty_server_list">Server list is empty.\nClick \'<b>+</b>\' to add a server, or\nuse the top address bar to connect directly.</string>
    <string name="tip_urlbar">You can enter IP address, hostname, or \'vnc://\' URI.</string>
    <string name="tip_discovery">Discovery can automatically find supported servers\nrunning on your network.</string>
    <string name="desc_navigation_btn">Open navigation drawer</string>
    <string name="desc_settings_btn">Settings</string>
    <string name="desc_saved_servers_tab">Saved servers</string>
    <string name="desc_discovered_servers_tab">Discovered servers</string>
    <string name="desc_add_new_server_btn">Add server</string>
    <string name="desc_save_discovered_server_btn">Save</string>
    <string name="desc_discovery_btn">Discover servers</string>
    <string name="desc_discovery_stop_btn">Stop discovering servers</string>
    <string name="desc_discovery_running">Discovering servers on you network</string>
    <string name="desc_keyboard_btn">Open keyboard</string>
    <string name="desc_virtual_keys_btn">Show virtual keys</string>
    <string name="desc_zoom_options_btn">Zoom options</string>
    <string name="desc_reset_zoom_btn">Reset zoom</string>
    <string name="desc_lock_zoom_btn">Lock zoom</string>
    <string name="desc_save_zoom_btn">Save current zoom as default</string>
    <string name="desc_retry_connection_btn">Reconnect</string>
    <string name="desc_back_btn">Back</string>
    <string name="desc_clear_url_btn">Clear</string>
    <string name="desc_server_url">Server address</string>
    <string name="desc_help_btn">Help</string>
    <string name="desc_discovered_list">List of automatically discovered servers</string>
    <string name="desc_saved_servers_list">List of saved Servers</string>
    <string name="pref_ui">Interface</string>
    <string name="pref_ui_summary">Look and feel</string>
    <string name="pref_viewer">Viewer</string>
    <string name="pref_viewer_summary">Picture-in-picture, zoom</string>
    <string name="pref_input">Input</string>
    <string name="pref_input_summary">Gestures, mouse, virtual keys</string>
    <string name="pref_servers">Servers</string>
    <string name="pref_server_summary">Login, discovery</string>
    <string name="pref_tools">Tools</string>
    <string name="pref_tools_summary">Import/Export, debugging</string>
    <string name="pref_experimental">Experimental</string>
    <string name="pref_experimental_summary">Extra goodies</string>
    <string name="pref_gesture_action_none" translatable="false">@string/title_none</string>
    <string name="pref_gesture_action_left_click">Left-click</string>
    <string name="pref_gesture_action_middle_click">Middle-click</string>
    <string name="pref_gesture_action_right_click">Right-click</string>
    <string name="pref_gesture_action_double_click">Double-click</string>
    <string name="pref_gesture_action_move_pointer">Move pointer</string>
    <string name="pref_gesture_action_pan">Pan local frame</string>
    <string name="pref_gesture_action_remote_scroll">Scroll remote content</string>
    <string name="pref_gesture_action_remote_drag">Drag remote content</string>
    <string name="pref_gesture_action_remote_drag_middle">Drag with middle button</string>
    <string name="pref_gesture_action_open_keyboard">Open keyboard</string>
    <string name="pref_theme">Theme</string>
    <string name="pref_theme_option_system">System</string>
    <string name="pref_theme_option_dark">Dark</string>
    <string name="pref_theme_option_light">Light</string>
    <string name="pref_prefer_advanced_editor">Directly open advanced server options</string>
    <string name="pref_sort_server_list">Sort saved servers by name</string>
    <string name="pref_gesture">Gestures</string>
    <string name="pref_gesture_style">Gesture style</string>
    <string name="pref_gesture_style_auto" translatable="false">@string/title_automatic</string>
    <string name="pref_gesture_style_auto_summary">Based on app Settings</string>
    <string name="pref_gesture_style_touchscreen">Touchscreen</string>
    <string name="pref_gesture_style_touchscreen_summary">Do actions at touch-point</string>
    <string name="pref_gesture_style_touchpad">Touchpad</string>
    <string name="pref_two_finger_tap">Two-finger tap</string>
    <string name="pref_double_tap">Double tap</string>
    <string name="pref_long_press">Long press</string>
    <string name="pref_swipe1">One-finger swipe</string>
    <string name="pref_swipe2">Two-finger swipe</string>
    <string name="pref_double_tap_swipe">Double tap and swipe</string>
    <string name="pref_long_press_swipe">Long press and swipe</string>
    <string name="pref_swipe_sensitivity">Swipe sensitivity</string>
    <string name="pref_invert_vertical_scrolling">Invert vertical scrolling</string>
    <string name="pref_mouse">Mouse</string>
    <string name="pref_mouse_passthrough">Mouse passthrough</string>
    <string name="pref_mouse_passthrough_summary_off">Use mouse events for local gestures</string>
    <string name="pref_mouse_passthrough_summary_on">Send mouse events directly to server</string>
    <string name="pref_hide_local_cursor">Hide local pointer</string>
    <string name="pref_mouse_back">Back button</string>
    <string name="pref_vk">Virtual keys</string>
    <string name="pref_vk_show_all">Show all keys</string>
    <string name="pref_vk_open_with_keyboard">Open with keyboard</string>
    <string name="pref_km">Key mappings</string>
    <string name="pref_km_right_alt_to_super">Right Alt → Super</string>
    <string name="pref_km_language_switch_to_super">Language Switch → Super</string>
    <string name="pref_km_back_to_escape">Back → Escape</string>
    <string name="pref_km_back_to_escape_summary">Does not affect the navigation bar</string>
    <string name="pref_orientation">Screen orientation</string>
    <string name="pref_fullscreen">Fullscreen</string>
    <string name="pref_display_cutout">Draw behind display cutout (experimental)</string>
    <string name="pref_enable_pip">Picture-in-picture</string>
    <string name="pref_keep_screen_on">Keep screen on</string>
    <string name="pref_toolbar">Toolbar</string>
    <string name="pref_toolbar_alignment">Alignment</string>
    <string name="pref_toolbar_open_with_swipe">Swipe-in from edge to open</string>
    <string name="pref_show_gesture_style_toggle">Show gesture style toggle</string>
    <string name="pref_zoom">Zoom</string>
    <string name="pref_zoom_min">Minimum</string>
    <string name="pref_zoom_max">Maximum</string>
    <string name="pref_per_orientation_zoom">Separate zoom for each orientation</string>
</resources>