<!--
  ~ Copyright (c) 2020  Gaurav Ujjwal.
  ~
  ~ SPDX-License-Identifier:  GPL-3.0-or-later
  ~
  ~ See COPYING.txt for more details.
  -->

<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto"
    app:title="@string/title_settings">

    <Preference
        app:fragment="com.gaurav.avnc.ui.prefs.PrefsActivity$Appearance"
        app:icon="@drawable/ic_palette"
        app:summary="@string/pref_ui_summary"
        app:title="@string/pref_ui" />

    <Preference
        app:fragment="com.gaurav.avnc.ui.prefs.PrefsActivity$Viewer"
        app:icon="@drawable/ic_video"
        app:summary="@string/pref_viewer_summary"
        app:title="@string/pref_viewer" />

    <Preference
        app:fragment="com.gaurav.avnc.ui.prefs.PrefsActivity$Input"
        app:icon="@drawable/ic_keyboard"
        app:summary="@string/pref_input_summary"
        app:title="@string/pref_input" />

    <Preference
        app:fragment="com.gaurav.avnc.ui.prefs.PrefsActivity$Server"
        app:icon="@drawable/ic_computer"
        app:summary="@string/pref_server_summary"
        app:title="@string/pref_servers" />

</PreferenceScreen>